--- a/frontend/unity-spa/shared/components/term-selector/term-selector.html
+++ b/frontend/unity-spa/shared/components/term-selector/term-selector.html
@@ -34,9 +34,9 @@
     >
       <div class="flex-1 min-w-0">
         <div ng-if="vm.selectedTerm" class="truncate">
-          <span class="font-medium">{{ vm.selectedTerm.label }}</span>
+          <span class="font-medium">{{ vm.selectedTerm.term_student_type }} {{ vm.selectedTerm.label }}</span>
           <span ng-if="!vm.compact" class="text-gray-500 text-xs block">
-            {{ vm.selectedTerm.enumSem }} {{ vm.selectedTerm.term_label }} {{ vm.selectedTerm.strYearStart }}-{{ vm.selectedTerm.strYearEnd }}
+            {{ vm.selectedTerm.term_student_type }} {{ vm.selectedTerm.enumSem }} {{ vm.selectedTerm.term_label }} {{ vm.selectedTerm.strYearStart }}-{{ vm.selectedTerm.strYearEnd }}
           </span>
         </div>
         <div ng-if="!vm.selectedTerm" class="text-gray-400">
