--- a/frontend/unity-spa/shared/components/sidebar/sidebar.html
+++ b/frontend/unity-spa/shared/components/sidebar/sidebar.html
@@ -72,7 +72,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197m13.5-9a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0z"></path>
         </svg>
         <span ng-if="!vm.isCollapsed" class="ml-3">Students</span>
-      </a>      
+      </a>            
 
       <!-- Campuses -->
       <a href="#/campuses"
@@ -174,6 +174,8 @@
           <div class="sb-popout-inner">
             <div class="sb-popout-header">{{ group.label }}</div>
             <div class="sb-popout-list">
+
+              <!-- Existing dynamic children -->
               <a ng-repeat="child in group.children"
                  ng-if="vm.canAccess(child.path)"
                  ng-href="{{ '#' + (child.href || child.path) }}"
